--- a/src/drawnMap.html
+++ b/src/drawnMap.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="libs/libs.css">
     <script src="libs/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript" src="libs/ckfinder/ckfinder.js"></script>
     <script type="text/javascript" src="js/bezier-editor.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/drawn_map.css">
@@ -141,6 +142,8 @@
 
 
     <script>
+
+
         CKEDITOR.on('dialogDefinition', function(ev) {
 
             // Take the dialog name and its definition 
@@ -161,8 +164,61 @@
             }
 
         });
-        var editor = CKEDITOR.replace("text");
+
+
+        var editor = CKEDITOR.replace( 'text');
+
+
+
+
+
+//           CKFinder.setupCKEditor( editor, '../' );
+        
+// function CheckAuthentication() {
+//     // WARNING : DO NOT simply return "true". By doing so, you are allowing
+//     // "anyone" to upload and list the files in your server. You must implement
+//     // some kind of session validation here. Even something very simple as...
+//     // return isset($_SESSION['IsAuthorized']) && $_SESSION['IsAuthorized'];
+//     return true; // not good option though; go for sessions
+// }
+// $baseUrl = 'http://127.0.0.1:8080/src/libs/upload';
+// $enabled = true;
+// $config['SecureImageUploads'] = false;
+// $config['ChmodFolders'] = 0777 ;
+
+
+
+
+
+
+
+
+
+
+
+
+
+//         CKFinder.setupCKEditor( editor, '/ckfinder/' );
+//         // console.log(CKFinder);
+
+// var finder = new CKFinder();
+// finder.basePath = '/ckfinder/';
+// // Setting custom width and user language.
+// finder.create({ width : 700, language : 'de' });
+
+
+// finder.selectActionData = "container";
+// finder.selectActionFunction = function( fileUrl, data ) {
+//     alert( 'Selected file: ' + fileUrl );
+//     // Using CKFinderAPI to show simple dialog.
+//     this.openMsgDialog( '', 'Additional data: ' + data['selectActionData'] );
+//     document.getElementById( data['selectActionData'] ).innerHTML = fileUrl;
+//     console.log(fileUrl);
+// }
+
+
     </script>
+
     <script src="libs/libs.js"></script>
     <script src="js/drawMap.js"></script>
 </body>
