added slider, and map wrapped in svg group

--- a/src/drawnMap.html
+++ b/src/drawnMap.html
@@ -103,7 +103,8 @@
             </li>
 
         </ul>
-
+<!-- <input type="hidden" id="images" name="images"
+             role="uploadcare-uploader" data-clearable="" data-images-only="true" data-crop="free,2:3,4:3,16:9"/> -->
 
         <div class="btn_wrap">
             <a href="#" class="editor_button waves-effect" id="plus"><i class="material-icons">zoom_in</i></a>
@@ -189,8 +190,6 @@ function favoriteFiles(container, button, dialogApi, settings) {
     );
   });
 }
-
-
 
 
 
