fixed displacement on 3rd step,  fixed img lead round light

--- a/src/drawnMap.html
+++ b/src/drawnMap.html
@@ -137,7 +137,7 @@
     <div class="switch center-align">
         <label>
                 Off
-            <input id="galleryLight" type="checkbox" data-light="lightOff">
+            <input id="galleryLight" name="light-trigger" type="checkbox" data-light="lightOff">
             <span class="lever"></span> On
         </label>
         <p id="on" style="display: none;" class="sidenav__title center-align">Light On!</p>
