fixed project structure

--- a/src/ready_page.html
+++ b/src/ready_page.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 	
+	<!-- <p id="coords">co-ordinates</p> -->
 
 	<div class="wrapper">
 		<div class="mapbg" id="IDmapbg" style="left: 0%; transform: scale(); top: 0%;">
