fixed bug with section content, fixed slider in build, 2nd step restricted if editor clear

--- a/src/index.html
+++ b/src/index.html
@@ -366,9 +366,9 @@
             </div>
         </div>
         <div class="buttons_bar">
-            <a href="drawnMap.html">
+            <!-- <a href="drawnMap.html"> -->
                 <button class="waves-effect waves-light btn" id="export">Save data and go next</button>
-            </a>
+            <!-- </a> -->
 
             <button class="waves-effect waves-light btn" id="redraw">redraw editor</button>
             <button class="waves-effect waves-light btn" id="clear">clear all</button>
