transport icons animation

--- a/src/drawnMap.html
+++ b/src/drawnMap.html
@@ -175,7 +175,7 @@
   <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal2">Modal</a> -->
 
   <!-- Modal Structure -->
-  <div id="modal2" class="modal">
+  <div id="modal2" class="modal modal2">
     <div class="modal-content">
       <h2 style="text-align: center; font-size: 23px;text-transform: uppercase;">Choose subpath moving icon:</h2>
       <table class="centered" style="width:100%">
