added some blocks of settings on the 1st step

--- a/src/index.html
+++ b/src/index.html
@@ -213,6 +213,13 @@
                                     <p>Route color:
                                         <input type="minicolors" class="colorPicker minicolors" name="mapRouteColor" id="mapRouteColorPicker" style="display: none;">
                                     </p>
+                                    <p>Route type:                                    
+                                        dotted, dashed, line
+                                    </p>
+                                    <p>
+                                        <input type="checkbox" id="showPath">
+                                        <label for="showPath">show route</label>
+                                    </p>
                                 </div>
                             </td>
                             <td>
