--- a/src/drawnMap.html
+++ b/src/drawnMap.html
@@ -189,20 +189,20 @@
                 <div class="icon_gallery">
                     <img src="svg/icons/sports.svg" class="icon_gallery__item" width="30px" height="30px" alt="">
                     <img src="svg/icons/transport.svg" class="icon_gallery__item" width="30px" height="30px" alt="">
-                    <img src="svg/icons/transport-1.svg" class="icon_gallery__item" width="30px" height="30px" alt="">
                     <img src="svg/icons/transport-2.svg" class="icon_gallery__item" width="30px" height="30px" alt="">
                     <img src="svg/icons/transport-3.svg" class="icon_gallery__item" width="30px" height="30px" alt="">
-
+                    <img src="svg/icons/transport-6.svg" class="icon_gallery__item" width="30px" height="30px" alt="">
+                    <img src="svg/icons/transport-7.svg" class="icon_gallery__item" width="30px" height="30px" alt="">
                 </div>
 
                 <p>Image color:</p>
                 <input type="minicolors" name="color"  id="subPathIcon" class="colorPicker minicolors">
-                <p>Image size:</p>
+<!--                 <p>Image size:</p>
                 <form class="rangePicker" action="#">
                     <p class="range-field">
                         <input type="range" name="size" id="test8" min="5" max="10" />
                     </p>
-                </form>
+                </form> -->
             </td>
             <td>
                 <object data="" id="subPathIconObj" width="50px" height="50px" type=""></object>
